k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trend-app
  labels:
    name: trend-app
    environment: production
