k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trend-app-network-policy
  namespace: trend-app
spec:
  podSelector:
    matchLabels:
      app: trend-app

  policyTypes:
    - Ingress
    - Egress

  ingress:
    # Allow traffic from Ingress Controller (ingress-nginx)
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 3000

    # Allow internal communication inside same namespace
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 3000

    # Allow external traffic from LoadBalancer
    - ports:
        - protocol: TCP
          port: 3000

  egress:
    # Allow DNS resolution
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53

    # Allow HTTP/HTTPS outbound traffic
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443

    # Allow database traffic (MySQL / Postgres)
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 5432
